Updating composer.json file

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "bandama/project-lite",
+    "name": "bandama/app-lite",
     "description": "Bandama Application Skeleton with Monolog",
     "type": "project",
     "license": "MIT",
