Integration of Monolog

--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,11 @@
     "type": "project",
     "license": "MIT",
     "version": "1.0.0-dev",
+    "authors": [{
+        "name": "Jean-François YOBOUE",
+        "email": "yoboue.kouamej@live.fr",
+        "role": "Developer"
+    }],
     "require-dev": {
         "php": ">=5.4"
     },
