--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Bandama Application Skeleton with Monolog",
     "type": "project",
     "license": "MIT",
-    "version": "1.0.0-dev",
+    "version": "1.0.0",
     "authors": [{
         "name": "Jean-François YOBOUE",
         "email": "yoboue.kouamej@live.fr",
@@ -25,7 +25,8 @@
     "autoload": {
         "psr-4": {
             "App\\": ["app/", "src/"],
-            "App\\Controller\\": "src/controllers"
+            "App\\Controller\\": "src/controllers",
+            "App\\Model\\": "src/models"
         }
     }
 }
