--- a/.htaccess
+++ b/.htaccess
@@ -11,4 +11,4 @@ RewriteEngine on
 
 RewriteCond %{HTTP_ACCEPT} text/html|application/json|application/xml|text/xml
 
-#RewriteRule ^(.*)$ web/app.php?url=$1 [QSA,L]
+RewriteRule ^(.*)$ web/app.php?url=$1 [QSA,L]
