--- a/composer.json
+++ b/composer.json
@@ -3,13 +3,13 @@
     "description": "Bandama Application Skeleton with Monolog",
     "type": "project",
     "license": "MIT",
-    "version": "1.0.0",
+    "version": "1.1.0",
     "require-dev": {
         "php": ">=5.4"
     },
     "require": {
         "php": ">=5.4",
-        "bandama/framework": "^1.0",
+        "bandama/framework": "1.1.*",
         "monolog/monolog": "^1.22"
     },
     "autoload-dev": {
